--- a/fastly.toml
+++ b/fastly.toml
@@ -1,5 +1,5 @@
 manifest_version = 2
 name = "Default starter kit for Expressly"
-description = "An empty application template for the Fastly Compute@Edge environment which simply returns a 200 OK response."
+description = "A basic Expressly starter kit that demonstrates simple GET, POST, and middleware functionality."
 authors = ["<oss@fastly.com>"]
 language = "javascript"
