--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "@fastly/js-compute": "^0.5.4",
-    "@fastly/expressly": "1.0.0-beta.1"
+    "@fastly/expressly": "github:fastly/expressly",
+    "@fastly/js-compute": "^0.5.4"
   },
   "scripts": {
     "prebuild": "webpack",
