--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "compute-starter-kit-javascript-empty",
   "version": "0.3.0",
-  "type" : "module",
   "main": "src/index.js",
   "author": "oss@fastly.com",
   "license": "MIT",
@@ -10,6 +9,7 @@
   },
   "devDependencies": {
     "core-js": "^3.19.1",
+    "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@fastly/js-compute": "^0.5.4"
   },
   "scripts": {
+    "prebuild": "webpack",
     "build": "js-compute-runtime bin/index.js bin/main.wasm",
     "deploy": "npm run build && fastly compute deploy"
   }
