--- a/fastly.toml
+++ b/fastly.toml
@@ -1,5 +1,12 @@
+# This file describes a Fastly Compute@Edge package. To learn more visit:
+# https://developer.fastly.com/reference/fastly-toml/
+
+authors = ["<oss@fastly.com>"]
+description = "A basic Expressly starter kit that demonstrates simple GET, POST, and middleware functionality."
+language = "javascript"
 manifest_version = 2
 name = "Default starter kit for Expressly"
-description = "A basic Expressly starter kit that demonstrates simple GET, POST, and middleware functionality."
-authors = ["<oss@fastly.com>"]
-language = "javascript"
+service_id = ""
+
+[scripts]
+  build = "npm exec js-compute-runtime ./src/index.js ./bin/main.wasm"
