--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "compute-starter-kit-javascript-empty",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "type": "module",
   "main": "src/index.js",
   "author": "oss@fastly.com",
   "license": "MIT",
   "engines": {
-    "node": ">=16.0.0"
-  },
-  "devDependencies": {
-    "core-js": "^3.19.1",
-    "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1"
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@fastly/expressly": "github:fastly/expressly",
-    "@fastly/js-compute": "^1.1.0"
-  },
-  "scripts": {
-    "build": "js-compute-runtime bin/index.js bin/main.wasm",
-    "deploy": "npm run build && fastly compute deploy"
+    "@fastly/expressly": "^1.1.0",
+    "@fastly/js-compute": "^1.2.0"
   }
 }
