--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
           ${{ runner.os }}-node-
     - run: npm ci
     - name: build
-      run: npm exec js-compute-runtime ./src/index.js ./bin/main.wasm
+      run: npm run build
