--- a/fastly.toml
+++ b/fastly.toml
@@ -8,4 +8,4 @@ manifest_version = 2
 name = "Default starter kit for Expressly"
 
 [scripts]
-  build = "npm exec js-compute-runtime ./src/index.js ./bin/main.wasm"
+  build = "npm run build"
