--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@fastly/expressly": "^1.2.0",
-    "@fastly/js-compute": "^1.3.2"
+    "@fastly/js-compute": "^1.5.1"
+  },
+  "scripts": {
+    "build": "js-compute-runtime ./src/index.js ./bin/main.wasm",
+    "deploy": "fastly compute publish"
   }
 }
