--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "oss@fastly.com",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "^18.0.0"
   },
   "dependencies": {
     "@fastly/expressly": "^1.2.0",
