DEVLIB-1233: Rename Compute@Edge to Compute

--- a/fastly.toml
+++ b/fastly.toml
@@ -1,11 +1,11 @@
-# This file describes a Fastly Compute@Edge package. To learn more visit:
+# This file describes a Fastly Compute package. To learn more visit:
 # https://developer.fastly.com/reference/fastly-toml/
 
 authors = ["<oss@fastly.com>"]
-description = "A basic Expressly starter kit that demonstrates simple GET, POST, and middleware functionality."
+description = "A basic expressly starter kit that demonstrates simple GET, POST, and middleware functionality."
 language = "javascript"
 manifest_version = 2
-name = "Default starter kit for Expressly"
+name = "Default starter kit for expressly"
 
 [scripts]
   build = "npm run build"
