--- a/fastly.toml
+++ b/fastly.toml
@@ -8,4 +8,5 @@ manifest_version = 2
 name = "Default starter kit for expressly"
 
 [scripts]
-  build = "npm run build"
+build = "npm run build"
+post_init = "npm install"
